Password Manager: skip non-text fields from consideration for filling.

BUG=619345

Review-Url: https://codereview.chromium.org/2583493003
Cr-Commit-Position: refs/heads/master@{#438868}

Former-commit-id: 78408cfeaad0b8657041a0e6b75df24e93229924